# Rpc_client_server

./: .gitignore  README.md  conanfile.py
src/: CMakeLists.txt  chat.proto  client.cpp  main.cpp
src/baseproto/: CMakeLists.txt  rpc_service_ptl.proto
src/rpc/: handler_type_check.hpp  rpc_error_code.hpp  rpc_websocket_service.hpp
test_package/: conanfile.py
